[package]
name = "kumandra-solving"
version = "0.1.0"
authors = ["Kumandra"]
description = "Encoder for the Kumandra Network Blockchain based on the SLOTH permutation"
edition = "2021"

[dependencies]
log = "0.4.14"
num_cpus = "1.13.0"
rayon = "1.5.1"
schnorrkel = "0.9.1"
sloth256-189 = "0.2.2"
kumandra-core-primitives = { version = "0.1.0", path = "../../primitives/core-primitives" }
thiserror = "1.0.30"

# Ugly workaround for https://github.com/rust-lang/cargo/issues/1197
[target.'cfg(any(target_os = "linux", target_os = "macos", all(target_os = "windows", target_env = "gnu")))'.dependencies.sha2]
features = ["asm"]
version = "0.10.0"

# Ugly workaround for https://github.com/rust-lang/cargo/issues/1197
# `asm` feature is not supported on Windows except with GNU toolchain
[target.'cfg(not(any(target_os = "linux", target_os = "macos", all(target_os = "windows", target_env = "gnu"))))'.dependencies.sha2]
version = "0.10.0"

[dev-dependencies]
rand = { version = "0.8.5", features = ["min_const_gen"] }

[features]
default = []
# Compile with CUDA support and use it if compatible GPU is available
cuda = [
    "sloth256-189/cuda",
]
