[package]
name = "kc-consensus-rpc"
version = "0.1.0"
authors = ["Kumandra"]
description = "RPC extensions for the Kumandra consensus algorithm"
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-oneshot = "0.5.0"
futures = "0.3.21"
futures-timer = "3.0.2"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-pubsub = "18.0.0"
log = "0.4.14"
parity-scale-codec = { version = "3.1.2", default-features = false }
parking_lot = "0.12.0"
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "c364008a6c7da8456e17967f55edf51e45146998" }
kc-consensus = { version = "0.1.0", path = "../../modules/consensus" }
sc-rpc-api = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "c364008a6c7da8456e17967f55edf51e45146998" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "c364008a6c7da8456e17967f55edf51e45146998" }
kp-consensus = { version = "0.1.0", path = "../../primitives/consensus" }
sp-consensus-slots = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "c364008a6c7da8456e17967f55edf51e45146998" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "c364008a6c7da8456e17967f55edf51e45146998" }
sp-core = { version = "6.0.0", git = "https://github.com/paritytech/substrate", rev = "c364008a6c7da8456e17967f55edf51e45146998" }
sp-runtime = { version = "6.0.0", git = "https://github.com/paritytech/substrate", rev = "c364008a6c7da8456e17967f55edf51e45146998" }
kumandra-core-primitives = { version = "0.1.0", path = "../../primitives/core" }
kumandra-rpc-primitives = { version = "0.1.0", path = "../../primitives/rpc" }