[package]
name = "kumandra-service"
version = "0.1.0"
authors = ["Kumandrian <kumandrian@koompi.com"]
description = "Kumandra service."
edition = "2021"
license = "GPL-3.0-or-later"
include = [
	"/src",
	"/Cargo.toml",
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cirrus-primitives = { version = "0.1.0", path = "../../cumulus/primitives" }
derive_more = "0.99.17"
frame-support = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
futures = "0.3.21"
jsonrpsee = { version = "0.14.0", features = ["server"] }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
parity-util-mem = { version = "0.11.0", default-features = false, features = ["primitive-types"] }
sc-basic-authorship = { version = "0.10.0-dev", git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
kc-consensus-fraud-proof = { version = "0.1.0", path = "../../clients/consensus/fraud-proof" }
kc-consensus = { version = "0.1.0", path = "../../clients/consensus/kumandra" }
kc-consensus-rpc = { version = "0.1.0", path = "../../clients/consensus/kumandra/rpc" }
sc-consensus-slots = { version = "0.10.0-dev", git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4", features = ["wasmtime"] }
sc-network = { version = "0.10.0-dev", git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
sc-rpc = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
sc-rpc-api = { version = "0.10.0-dev", git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
sc-service = { version = "0.10.0-dev", git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4", default-features = false, features = ["wasmtime"] }
sc-telemetry = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
sc-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
sp-authorship = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
sp-consensus-slots = { version = "0.10.0-dev", git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
kp-consensus = { version = "0.1.0", path = "../../primitives/consensus" }
sp-core = { version = "6.0.0", git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
kp-executor = { version = "0.1.0", path = "../../primitives/executor" }
kp-objects = { version = "0.1.0", path = "../../primitives/objects" }
sp-offchain = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
sp-runtime = { version = "6.0.0", git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
sp-timestamp = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
sp-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
sp-trie = { version = "6.0.0", git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
kumandra-fraud-proof = { version = "0.1.0", path = "../../utils/fraud-proof" }
kumandra-runtime-primitives = { version = "0.1.0", path = "../../primitives/runtime" }
substrate-frame-rpc-system = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
substrate-prometheus-endpoint = { git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
thiserror = "1.0.31"
tracing = "0.1"

sp-session = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
frame-system-rpc-runtime-api = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }

[features]
default = []
