[package]
name = "kumandra-service"
version = "0.1.0"
authors = ["Kumandra <https://kumandra.org>"]
description = "Kumandra service."
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://koompi.com"
repository = "https://github.com/kumandra/kumandra"
include = [
	"/src",
	"/Cargo.toml",
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cirrus-primitives = { version = "0.1.0", path = "../../cumulus/primitives" }
derive_more = "0.99.17"
frame-support = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
futures = "0.3.21"
jsonrpsee = { version = "0.14.0", features = ["server"] }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
parity-scale-codec = "3.1.5"
parity-util-mem = { version = "0.11.0", default-features = false, features = ["primitive-types"] }
sc-basic-authorship = { version = "0.10.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
kc-consensus-fraud-proof = { version = "0.1.0", path = "../../clients/consensus/fraud-proof" }
kc-consensus = { version = "0.1.0", path = "../../clients/consensus" }
kc-consensus-rpc = { version = "0.1.0", path = "../../clients/consensus/rpc" }
sc-consensus-slots = { version = "0.10.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86", features = ["wasmtime"] }
sc-network = { version = "0.10.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
sc-rpc = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
sc-rpc-api = { version = "0.10.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
sc-service = { version = "0.10.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86", default-features = false, features = ["wasmtime"] }
sc-telemetry = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
sc-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
sp-authorship = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
sp-consensus-slots = { version = "0.10.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
kp-consensus = { version = "0.1.0", path = "../../primitives/consensus" }
sp-core = { version = "6.0.0", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
kp-executor = { version = "0.1.0", path = "../../primitives/executor" }
kp-objects = { version = "0.1.0", path = "../../primitives/objects" }
sp-offchain = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
sp-runtime = { version = "6.0.0", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
sp-timestamp = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
sp-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
sp-trie = { version = "6.0.0", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
kumandra-fraud-proof = { version = "0.1.0", path = "../../utils/fraud-proof" }
kumandra-networking = { version = "0.1.0", path = "../../modules/networking" }
kumandra-runtime-primitives = { version = "0.1.0", path = "../../primitives/runtime" }
substrate-frame-rpc-system = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
substrate-prometheus-endpoint = { git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
thiserror = "1.0.31"
tracing = "0.1.35"

sp-session = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
frame-system-rpc-runtime-api = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }
pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "1399afdcd8ab4d7fad149c96f9cadcaf04b94f86" }

[features]
default = []
