[package]
name = "pallet-executor"
version = "0.1.0"
authors = ["Kumandra"]
edition = "2021"
description = "Kumandra executor pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { version = "0.4.14", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive"] }

# Substrate dependency
frame-support = { git = "https://github.com/paritytech/substrate", rev = "c364008a6c7da8456e17967f55edf51e45146998", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", rev = "c364008a6c7da8456e17967f55edf51e45146998", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "c364008a6c7da8456e17967f55edf51e45146998", default-features = false }

# kumandra primitive
kp-executor = { path = "../../primitives/executor", default-features = false }

[features]
default = ["std"]
std = [
  "codec/std",
  "log/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "sp-core/std",
  "kp-executor/std",
]
try-runtime = ["frame-support/try-runtime"]
