[package]
name = "pallet-file-bank"
version = "0.1.0"
authors = ["Kumandra"]
edition = "2018"
license = "Apache-2.0"
description = "FRAME pallet for file-bank management"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { default-features = false, features = ['derive'], version = "1.0" }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-10', default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-10', default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-10', default-features = false }

pallet-balances = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-10', default-features = false }

sp-io = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-10', default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-10', default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-10', default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-10', default-features = false }

# local dependencies
pallet-sminer = { path = '../sminer', default-features = false }
pallet-segment-book = { path = '../segment-book', default-features = false }

[dev-dependencies]
pallet-scheduler = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-10' }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-10' }
frame-support-test  = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-10' }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
]
runtime-benchmarks = ["frame-benchmarking"]
