[package]
name = "pallet-kumandra-space"
version = "0.1.0"
authors = ["Kumandra"]
edition = "2021"
description = "Kumandra consensus pallet. Based on a fork of `pallet_babe`."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { version = "0.4.14", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", rev = "c364008a6c7da8456e17967f55edf51e45146998", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", rev = "c364008a6c7da8456e17967f55edf51e45146998", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", rev = "c364008a6c7da8456e17967f55edf51e45146998", default-features = false }

sp-consensus-slots = { git = "https://github.com/paritytech/substrate", rev = "c364008a6c7da8456e17967f55edf51e45146998", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", rev = "c364008a6c7da8456e17967f55edf51e45146998", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "c364008a6c7da8456e17967f55edf51e45146998", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", rev = "c364008a6c7da8456e17967f55edf51e45146998", default-features = false }

kp-consensus = { path = "../../primitives/consensus", default-features = false }
kumandra-core-primitives = { path = "../../primitives/core-primitives", default-features = false }
kumandra-primitives = { path = "../../primitives", default-features = false }

[dev-dependencies]
schnorrkel = "0.9.1"
sp-core = { git = "https://github.com/paritytech/substrate", rev = "c364008a6c7da8456e17967f55edf51e45146998" }
pallet-balances = { git = "https://github.com/paritytech/substrate", rev = "c364008a6c7da8456e17967f55edf51e45146998" }

pallet-offences-kumandra = { path = "../offences" }
kumandra-solving = { path = "../../modules/solving" }

[features]
default = ["std"]
no-early-solution-range-updates = []
std = [
	"codec/std",
	"log/std",
	"num-traits/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"sp-consensus-slots/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"kp-consensus/std",
	"kumandra-core-primitives/std",
	"kumandra-primitives/std",
]
try-runtime = ["frame-support/try-runtime"]
